2009-08-22  Glenn Morris  <rgm@gnu.org>

	* url-file.el (url-file-build-filename):
	* url-privacy.el (url-setup-privacy-info): Remove code for defunct
	system-types Apple-Macintosh, emx, ms-windows, next-mach.

2009-06-21  Chong Yidong  <cyd@stupidchicken.com>

	* Branch for 23.1.

2009-03-27  Stefan Monnier  <monnier@iro.umontreal.ca>

	* url-handlers.el (url-file-handler): Save match data.

2009-02-21  Jason Rumney  <jasonr@gnu.org>

	* url-expand.el (url-default-expander): Use concat to combine
	parts. (Bug #1020)

2009-02-10  Glenn Morris  <rgm@gnu.org>

	* url-util.el (url-generate-unique-filename): Silence compiler.

2009-02-07  Chong Yidong  <cyd@stupidchicken.com>

	* url-file.el (url-file): Use make-temp-file.

	* url-util.el (url-generate-unique-filename): Mark as obsolete.

	* url-vars.el (url-temporary-directory): Mark as obsolete.

2009-01-15  Chong Yidong  <cyd@stupidchicken.com>

	* url-cookie.el (url-cookie-retrieve): Fix last change.

2009-01-14  Chong Yidong  <cyd@stupidchicken.com>

	* url-cookie.el (url-cookie-retrieve): Handle null localpart.

2009-01-13  Juanma Barranquero  <lekktu@gmail.com>

	* url-util.el (url-truncate-url-for-viewing): Doc fix.

2009-01-09  Glenn Morris  <rgm@gnu.org>

	* url-cid.el (url-cid-gnus): Fix typo in header name.

2008-11-04  Chong Yidong  <cyd@stupidchicken.com>

	* url-util.el (url-basepath): Add url-basepath as an alias for
	url-file-directory.

2008-10-24  Juanma Barranquero  <lekktu@gmail.com>

	* url.el (url-configuration-directory): Use `locate-user-emacs-file'.

2008-10-20  İsmail Dönmez  <ismail@namtrac.org>  (tiny change)

	* url-auth.el (url-basic-auth): Encode password string.

2008-08-30  Glenn Morris  <rgm@gnu.org>

	* url-http.el (url-https-expand-file-name): Resolve directly to
	url-default-expander rather than via another alias.
	(url-default-expander): Autoload an autoload.  (Bug#825).

2008-07-02  Juanma Barranquero  <lekktu@gmail.com>

	* url.el (url-do-setup):